# cuppy

./: .npmrc  .releaserc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/: dependabot.yaml
.github/workflows/: release.yaml  release_package.yaml  update_datasets.yaml
assets/: index-D4fCDunQ.css  index-DG67JR77.js  index-MnnTmp5G.js  index-WodFyS3G.js  index-id5C4ZvG.js
core/: .releaserc  CHANGELOG.md  README.md  package.json  tsconfig.json  vite.config.ts
core/src/: index.ts
datasets/builder/: builder.py
datasets/cpi-u/: .releaserc  CHANGELOG.md  README.md  index.ts  package.json  tsconfig.json  vite.config.ts
datasets/cpi-u/data/: data.json
datasets/cpi-u/src/: index.ts
demo/: .releaserc  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: main.ts  style.css
scripts/update-datasets/: README.md  main.py  pyproject.toml
src/: index.ts  lib.dom.d.ts
