[tool.poetry]
name = "update-datasets"
version = "1.0.0"
description = "Script to update the price index data for Cuppy"
authors = ["moltinginstar"]
license = "MIT"
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
pandas = "^2.2.2"
pyarrow = "^15.0.0"
semver = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
